; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4xdr.c_nfs4_xdr_enc_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4xdr.c_nfs4_xdr_enc_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_rqst = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.nfs_writeargs = type { i32, i32, i32 }
%struct.xdr_stream = type { i32 }
%struct.compound_hdr = type { i32 }

@XDRBUF_WRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rpc_rqst*, i32*, %struct.nfs_writeargs*)* @nfs4_xdr_enc_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfs4_xdr_enc_write(%struct.rpc_rqst* %0, i32* %1, %struct.nfs_writeargs* %2) #0 {
  %4 = alloca %struct.rpc_rqst*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.nfs_writeargs*, align 8
  %7 = alloca %struct.xdr_stream, align 4
  %8 = alloca %struct.compound_hdr, align 4
  store %struct.rpc_rqst* %0, %struct.rpc_rqst** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.nfs_writeargs* %2, %struct.nfs_writeargs** %6, align 8
  %9 = getelementptr inbounds %struct.compound_hdr, %struct.compound_hdr* %8, i32 0, i32 0
  %10 = load %struct.nfs_writeargs*, %struct.nfs_writeargs** %6, align 8
  %11 = getelementptr inbounds %struct.nfs_writeargs, %struct.nfs_writeargs* %10, i32 0, i32 2
  %12 = call i32 @nfs4_xdr_minorversion(i32* %11)
  store i32 %12, i32* %9, align 4
  %13 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %14 = getelementptr inbounds %struct.rpc_rqst, %struct.rpc_rqst* %13, i32 0, i32 0
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @xdr_init_encode(%struct.xdr_stream* %7, %struct.TYPE_2__* %14, i32* %15)
  %17 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %18 = call i32 @encode_compound_hdr(%struct.xdr_stream* %7, %struct.rpc_rqst* %17, %struct.compound_hdr* %8)
  %19 = load %struct.nfs_writeargs*, %struct.nfs_writeargs** %6, align 8
  %20 = getelementptr inbounds %struct.nfs_writeargs, %struct.nfs_writeargs* %19, i32 0, i32 2
  %21 = call i32 @encode_sequence(%struct.xdr_stream* %7, i32* %20, %struct.compound_hdr* %8)
  %22 = load %struct.nfs_writeargs*, %struct.nfs_writeargs** %6, align 8
  %23 = getelementptr inbounds %struct.nfs_writeargs, %struct.nfs_writeargs* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @encode_putfh(%struct.xdr_stream* %7, i32 %24, %struct.compound_hdr* %8)
  %26 = load %struct.nfs_writeargs*, %struct.nfs_writeargs** %6, align 8
  %27 = call i32 @encode_write(%struct.xdr_stream* %7, %struct.nfs_writeargs* %26, %struct.compound_hdr* %8)
  %28 = load i32, i32* @XDRBUF_WRITE, align 4
  %29 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %30 = getelementptr inbounds %struct.rpc_rqst, %struct.rpc_rqst* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = or i32 %32, %28
  store i32 %33, i32* %31, align 4
  %34 = load %struct.nfs_writeargs*, %struct.nfs_writeargs** %6, align 8
  %35 = getelementptr inbounds %struct.nfs_writeargs, %struct.nfs_writeargs* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %43

38:                                               ; preds = %3
  %39 = load %struct.nfs_writeargs*, %struct.nfs_writeargs** %6, align 8
  %40 = getelementptr inbounds %struct.nfs_writeargs, %struct.nfs_writeargs* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = call i32 @encode_getfattr(%struct.xdr_stream* %7, i32 %41, %struct.compound_hdr* %8)
  br label %43

43:                                               ; preds = %38, %3
  %44 = call i32 @encode_nops(%struct.compound_hdr* %8)
  ret i32 0
}

declare dso_local i32 @nfs4_xdr_minorversion(i32*) #1

declare dso_local i32 @xdr_init_encode(%struct.xdr_stream*, %struct.TYPE_2__*, i32*) #1

declare dso_local i32 @encode_compound_hdr(%struct.xdr_stream*, %struct.rpc_rqst*, %struct.compound_hdr*) #1

declare dso_local i32 @encode_sequence(%struct.xdr_stream*, i32*, %struct.compound_hdr*) #1

declare dso_local i32 @encode_putfh(%struct.xdr_stream*, i32, %struct.compound_hdr*) #1

declare dso_local i32 @encode_write(%struct.xdr_stream*, %struct.nfs_writeargs*, %struct.compound_hdr*) #1

declare dso_local i32 @encode_getfattr(%struct.xdr_stream*, i32, %struct.compound_hdr*) #1

declare dso_local i32 @encode_nops(%struct.compound_hdr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
